# MovieMatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.staging.yml  docker-compose.yml  requirements.txt
.github/workflows/: cd.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_create_initial_tables.py
apps/common/: __init__.py  auth.py  cache.py  observability.py  schemas.py  settings.py
apps/common/db/: __init__.py  models.py  session.py
apps/gateway/: main.py
apps/orchestrator/: main.py  recommender.py
apps/workers/: celery_app.py  celery_tasks.py  cf_main.py  main.py  mood_main.py  nlp_main.py  recommendation_worker.py  service_base.py
backend/: Dockerfile  alembic.ini  config.py  dependencies.py  exceptions.py  main.py  metrics.py  pyproject.toml
backend/db/: database.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 001_initial_schema.py  002_genome_features.py  003_profile_extensions.py  004_email_verification.py  005_embedding_dim_768.py
backend/db/queries/: hybrid_search.sql
backend/middleware/: logging.py  rate_limit.py
backend/routers/: auth.py  health.py  movies.py  ratings.py  recommendations.py  watchlist.py
backend/schemas/: auth.py  common.py  movies.py  recommendations.py
backend/services/: cache.py  cv_client.py  email.py  nlp_client.py  recommendations.py  recsys_client.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_movies.py  test_ratings.py
backend/tests/unit/: test_schemas.py
backend/workers/: celery_app.py
backend/workers/tasks/: analytics.py  recommendations.py
docs/superpowers/plans/: 2026-04-17-recsys-v3-plan.md  2026-04-17-results.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/frontend/: index.html  next.config.mjs.html  playwright.config.ts.html  (+1 more)
frontend/src/: App.tsx  styles.css
k8s/: namespace.yaml
k8s/backend/: deployment.yaml  hpa.yaml  service.yaml
k8s/frontend/: deployment.yaml
k8s/ingress/: ingress.yaml
k8s/ml/: cv-deployment.yaml  nlp-deployment.yaml  recsys-deployment.yaml
k8s/secrets/: secrets.yaml.example
ml/cv/: Dockerfile  download_model.py  inferencer.py  preprocess.py  pyproject.toml  service.py
ml/nlp/: Dockerfile  indexer.py  pyproject.toml  service.py
ml/recsys/: Dockerfile  baselines.py  cross_encoder.py  evaluate.py  genome_loader.py  model.py  pyproject.toml  service.py  train.py  train_cross.py
scripts/: ingest_sample_data.py  smoke_check_staging.py  staging_bootstrap.sh  verify_e2e.py
scripts/monitoring/: check_services.py
scripts/sql/: init.sql
tests/: conftest.py
tests/integration/: test_orchestrator_api.py
tests/smoke/: test_e2e_gateway_flow.py
tests/unit/: test_recommender.py
(+78 files in other folders)
