[project]
name = "moviematch-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "uvloop>=0.21.0",
  "pydantic[email]>=2.9.0",
  "pydantic-settings>=2.6.0",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "redis[hiredis]>=5.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.17",
  "httpx>=0.28.0",
  "celery[redis]>=5.4.0",
  "python-magic>=0.4.27",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",
  "tqdm>=4.67.0",
  "rich>=13.9.0",
  "numpy>=2.1.0",
  "greenlet>=3.4.0",
  "bcrypt>=5.0.0",
  "testcontainers[postgres,redis]>=4.13.3",
  "respx>=0.23.1",
  "aiosmtplib>=5.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "testcontainers[postgres]>=4.8.0",
  "respx>=0.21.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "bandit>=1.8.0",
  "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "C4"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
