[project]
name = "moviematch-ml-nlp"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "asyncpg>=0.30.0",
  "pgvector>=0.3.6",
  "sentence-transformers>=3.3.0",
  "numpy>=2.1.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",
  "rapidfuzz>=3.14.5",
  "deep-translator>=1.11.4",
]
