[project]
name = "moviematch-ml-recsys"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "asyncpg>=0.30.0",
  "pgvector>=0.3.6",
  "torch>=2.5.0",
  "pytorch-lightning>=2.4.0",
  "mlflow>=2.18.0",
  "numpy>=2.1.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",
  "implicit>=0.7.2",
  "scipy>=1.14.0",
]
